<resources>
    <string name="app_name">BiciCrash</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_application_id" translatable="false">1847200868925270</string>

    <string name="title_section1">Inicio</string>
    <string name="title_section2">Mapa</string>
    <string name="title_section3">Contactos</string>
    <string name="title_section4">Datos</string>
    <string name="title_section5">Configuraciones</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tools">ToolsActivity</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_telefono">Telefono</string>
    <string name="hint_correo">Correo</string>
    <string name="hint_genero">Genero</string>
    <string name="hint_rh">R.H.</string>
    <string name="hint_eps">E.P.S.</string>
    <string name="hint_seguro">Seguro</string>
    <string name="message_warning">Ayuda!!!  Acabo de sufrir un accidente</string>
    <string name="message_title">Mensaje de emergencia</string>
    <string name="pref_title_ringtone">Rooster</string>
    <string name="hint_cedula">Cedula</string>

    <string name="log_out">Salir</string>
    <string name="message_input_email">ingresa un correo electrónico</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
</resources>
