<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Activities.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/appBarLayout2">
    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="88dp"
                android:src="@drawable/account_settings" />

            <LinearLayout
                android:id="@+id/crash_area_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/imageButton"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/crash_img_cliente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/account_settings" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/crash_til_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:hint="@string/hint_nombre">

                    <EditText
                        android:id="@+id/crash_campo_nombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="text"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/crash_area_cedula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/crash_area_nombre"
                android:layout_marginTop="11dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/crash_img_cedula"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/file_document_box" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/crash_til_cedula"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp">

                    <EditText
                        android:id="@+id/crash_campo_cedula"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/hint_cedula"
                        android:inputType="phone" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/crash_area_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/crash_area_cedula"
                android:layout_marginTop="11dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/crash_img_telefono"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/phone" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/crash_til_telefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp">

                    <EditText
                        android:id="@+id/crash_campo_telefono"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/hint_telefono"
                        android:inputType="phone" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/crash_area_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/crash_area_telefono"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/crash_img_correo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/crash_img_correo"
                    android:layout_column="0"
                    android:layout_gravity="center_vertical"
                    android:layout_row="2"
                    android:src="@drawable/email" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/crash_til_correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp">

                    <EditText
                        android:id="@+id/crash_campo_correo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/hint_correo"
                        android:inputType="textEmailAddress"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/crash_area_genero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/crash_area_correo"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/crash_img_genero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/crash_img_correo"
                    android:layout_column="0"
                    android:layout_gravity="center_vertical"
                    android:layout_row="2"
                    android:src="@drawable/gender_male_female" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/crash_til_genero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp">

                    <EditText
                        android:id="@+id/crash_campo_genero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/hint_genero"
                        android:inputType="text"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/crash_area_rh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/crash_area_genero"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/crash_img_rh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/crash_img_genero"
                    android:layout_column="0"
                    android:layout_gravity="center_vertical"
                    android:layout_row="2"
                    android:src="@drawable/heart_pulse" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/crash_til_rh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp">

                    <EditText
                        android:id="@+id/crash_campo_rh"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/hint_rh"
                        android:inputType="text"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/crash_area_eps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/crash_area_rh"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/crash_img_eps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/crash_img_rh"
                    android:layout_column="0"
                    android:layout_gravity="center_vertical"
                    android:layout_row="2"
                    android:src="@drawable/medical_bag" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/crash_til_eps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp">

                    <EditText
                        android:id="@+id/crash_campo_eps"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/hint_eps"
                        android:inputType="text"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/crash_area_seguro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/crash_area_eps"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/crash_img_seguro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/crash_img_eps"
                    android:layout_column="0"
                    android:layout_gravity="center_vertical"
                    android:layout_row="2"
                    android:src="@drawable/alarm_light" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/crash_til_seguro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp">

                    <EditText
                        android:id="@+id/crash_campo_seguro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/hint_seguro"
                        android:inputType="none"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/crash_area_message_warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/crash_area_seguro"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/crash_img_message_warning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/crash_area_seguro"
                    android:layout_column="0"
                    android:layout_gravity="center_vertical"
                    android:layout_row="2" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/crash_til_message_warning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp">

                    <EditText
                        android:id="@+id/crash_campo_message_warning"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Mensaje Enviado"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageButton
                android:id="@+id/fbB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="60dp"
                android:layout_marginTop="13dp"
                android:layout_toEndOf="@+id/imageButton"
                android:background="@color/cardview_light_background"
                app:srcCompat="@drawable/facebook_box" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/fbB"
                android:layout_below="@+id/fbB"
                android:text="Publicame" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>

